--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,42 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden; /* to always show the content within */
 }
 
+.category {
+  display: inline-block;
+  color: #fff;
+  font-size: 0.55rem; 
+  text-transform: uppercase;
+  padding: 0.4rem 0.6rem;
+  border-radius: 15px;
+  margin-bottom: 0.5rem;
+}
+
+.category-sports { background: var(--sports-color) }
+.category-ent { background: var(--ent-color) }
+.category-tech { background: var(--tech-color) }
+
+.btn {
+  display: inline-block;
+  border: none;
+  background: var(--dark-color);
+  color: white;
+  padding: 0.5rem 1.5rem;
+}
+
+.btn-light { background: var(--light-color) }
+.btn-primary { background: var(--primary-color) }
+.btn-secondary { background: var(--secondary-color) }
+
+.btn-block { 
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
 /* Navigation */
 #main-nav {
   background: #fff;
@@ -102,4 +138,43 @@ h1, h2, h3, h4, h5, h6 {
 #main-nav .social i {
   color: #777;
   margin-right: .5rem;
+}
+
+/* Showcase */
+/* would use flex box */
+
+/* header - showcase container */
+#showcase {
+  color: #fff;
+  background-color: #333;
+  padding: 2rem;
+  /* the umg background will be in the "before" with position absolute */
+  position:relative;
+}
+
+#showcase:before {
+  content:"";
+  background: url("../img/featured.jpg") no-repeat center center/cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+#showcase .showcase-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+#showcase .showcase-content {
+  z-index: 1;
+}
+
+#showcase .showcase-content p {
+  margin-bottom: 1rem;
 }
