--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,18 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--primary-color) !important;
 }
 
+/* Inner page grid container */
+.page-container {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  margin: 2rem 0;
+  grid-gap: 1.5rem;
+}
+
+.page-container > *:first-child {
+  grid-row: 1 / span 3;
+}
+
 .bg-dark { 
   background: var(--dark-color);
   color: #fff;
@@ -292,3 +304,4 @@ h1, h2, h3, h4, h5, h6 {
 #main-footer .footer-container input[type="submit"] {
   width: 90%;
 }
+
