creat and style About and Article pages

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,9 @@ h1, h2, h3, h4, h5, h6 {
 .p-2 { padding: 2rem };
 .p-3 { padding: 3rem };
 
-
+.l-heading { 
+  font-size: 3rem;
+}
 
 /* Navigation */
 #main-nav {
@@ -265,6 +267,18 @@ h1, h2, h3, h4, h5, h6 {
 #home-aritcles .articles-container > *:last-child 
 {
   grid-column: 2 / span 2;
+}
+
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #eee;
+  padding: 0.5rem;
+}
+
+#article .meta .category {
+  margin-top: 0.4rem;
 }
 
 /* Footer */
